Add controls to view, add debug to Makefile

--- a/proj/Makefile
+++ b/proj/Makefile
@@ -2,6 +2,11 @@
 run:
 	python3 run.py
 
+debug:
+	python3 run.py -vc
+
+debugf: # this is to test debugging with a file
+	python3 run.py -cvf data/debug_file
+
 test:
 	python3 -m unittest discover
-
