--- a/proj/Makefile
+++ b/proj/Makefile
@@ -1,12 +1,12 @@
 .PHONY: test run
 run:
-	python3 run.py
+	python3 -m cgolai
 
 debug:
-	python3 run.py -vc
+	python3 -m cgolai -vc
 
 debugf: # this is to test debugging with a file
-	python3 run.py -cvf data/debug_file
+	python3 -m cgolai -cvf data/debug_file
 
 test:
 	python3 -m unittest discover
