--- a/proj/Makefile
+++ b/proj/Makefile
@@ -1,18 +1,12 @@
-.PHONY: run debug debugf test clean install
+.PHONY: run debug test install
 run:
 	cd src && python3 -m cgolai.cgol
 
 debug:
-	cd src && python3 -m cgolai.cgol -vc
-
-debugf:
-	cd src && python3 -m cgolai.cgol -cvf src/test/data/debug_file
+	cd src && python3 -m cgolai.cgol -cvf test/datafile
 
 test:
 	python3 -m unittest discover -s src
-
-clean:
-	rm -rf cgolai.egg-info
 
 install:
 	python3 -m pip install .
