new cgol problem (breaks run_report v1 here)

--- a/proj/Makefile
+++ b/proj/Makefile
@@ -6,7 +6,7 @@ install:
 	cd .. && make install &>/dev/null
 
 generate: install
-	python3 train_nn.py
+	python3 run_report_v2.py
 
 load: install
 	echo python3 -m cgolai.cgol -f {the file}
